hide warning message from illegal access to security.provider